<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/business_name" />

            <EditText
                android:id="@+id/etxt_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/business_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/etxt_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/country" />

            <EditText
                android:id="@+id/etxt_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/country"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/currency" />

            <EditText
                android:id="@+id/etxt_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/currency"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/time_zone" />

            <EditText
                android:id="@+id/etxt_time_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:focusable="false"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/time_zone"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/etxt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/etxt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/etxt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etxt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="16dp"
                android:password="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/sailec_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>